add db and registration controller

--- a/Semestrovka/Semestrovka/Views/DataBase/Create.cshtml
+++ b/Semestrovka/Semestrovka/Views/DataBase/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.Phone
+﻿@model Semestrovka.Models.DBModels.Product
 @{
     ViewBag.Title = "Добавление";
 }
@@ -8,8 +8,8 @@
         <input type="text" asp-for="Name" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="Company" class="control-label">Компания</label>
-        <input type="text" asp-for="Company" class="form-control" />
+        <label asp-for="Producer" class="control-label">Компания</label>
+        <input type="text" asp-for="Producer" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="Price" class="control-label">Цена</label>
