--- a/Semestrovka/Semestrovka/Views/DataBase/Delete.cshtml
+++ b/Semestrovka/Semestrovka/Views/DataBase/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.Phone
+﻿@model Semestrovka.Models.DBModels.Product
 @{
      ViewBag.Title = "Удаление";
 }
@@ -12,7 +12,7 @@
  
         <dt>Производитель</dt>
         <dd>
-            @Html.DisplayFor(model => model.Company)
+            @Html.DisplayFor(model => model.Producer)
         </dd>
  
         <dt>Цена</dt>
