--- a/Semestrovka/Semestrovka/Views/PartialPages/SearchPartial.cshtml
+++ b/Semestrovka/Semestrovka/Views/PartialPages/SearchPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.IO
-@using WebApplication1.Controllers
+@using Semestrovka.Controllers
 
 <div class="col-md-4">
     <div class="single-sidebar">
