--- a/Semestrovka/Semestrovka/Views/DataBase/AdminPanel.cshtml
+++ b/Semestrovka/Semestrovka/Views/DataBase/AdminPanel.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication1.Models.Phone>
+﻿@model IEnumerable<Semestrovka.Models.DBModels.Product>
 @{
     ViewBag.Title = "Все предметы";
 }
@@ -7,7 +7,7 @@
     @foreach (var item in Model)
     {
         <tr align="center" valign="center">
-            <td><img width="5%" height="5%" src="@item.Img.Replace("~","") "></td>
+            <td><img width="5%" height="5%" src="@item.MainpictureurlNavigation.Imagepath.Replace("~","") "></td>
             <td>@item.Name</td>
             <td ><a asp-action="Details" asp-controller="DataBase" asp-route-id="@item.Id">Подробнее</a> |
                 <a asp-action="Edit" asp-controller="DataBase" asp-route-id="@item.Id">Изменить</a> |
