--- a/Semestrovka/Semestrovka/Views/DataBase/Details.cshtml
+++ b/Semestrovka/Semestrovka/Views/DataBase/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.Phone
+﻿@model Semestrovka.Models.DBModels.Product
 @{
     ViewBag.Title = Model.Name;
 }
@@ -7,7 +7,7 @@
 <div>
     <dl class="dl-horizontal">
         <dt>Производитель</dt>
-        <dd>@Model.Company</dd>
+        <dd>@Model.Producer</dd>
  
         <dt>Цена</dt>
         <dd>@Model.Price</dd>
