--- a/Semestrovka/Semestrovka/Views/DataBase/SearchResults.cshtml
+++ b/Semestrovka/Semestrovka/Views/DataBase/SearchResults.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication1.Models.Phone>
+﻿@model IEnumerable<Semestrovka.Models.DBModels.Product>
 @{
     ViewBag.Title = "Results";
 }
@@ -10,7 +10,7 @@
         <div class="col-md-3 col-sm-6">
             <div class="single-shop-product">
                 <div class="product-upper">
-                    <img src="@item.Img.Replace("~", "")" alt="">
+                    <img src="@item.MainpictureurlNavigation.Imagepath.Replace("~", "")" alt="">
                 </div>
                 <h2>
                     <a href="">@item.Name</a>
