--- a/Semestrovka/Semestrovka/Views/Other/Shop.cshtml
+++ b/Semestrovka/Semestrovka/Views/Other/Shop.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication1.Models.Phone>
+﻿@model IEnumerable<Semestrovka.Models.DBModels.Product>
 @{
     ViewBag.Title = "Shop";
 }
@@ -13,7 +13,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="single-shop-product">
                         <div class="product-upper">
-                            <img src="@item.Img.Replace("~", "")" alt="">
+                            <img src="@item.MainpictureurlNavigation.Imagepath" alt="">
                         </div>
                         <h2>
                             <a href="">@item.Name</a>
