--- a/Semestrovka/Semestrovka/Views/_ViewImports.cshtml
+++ b/Semestrovka/Semestrovka/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using WebApplication1
-@using WebApplication1.Models
+﻿@using Semestrovka
+@using Semestrovka.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
