--- a/Semestrovka/Semestrovka/Views/Shared/_Layout.cshtml
+++ b/Semestrovka/Semestrovka/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
 @*                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> *@
 @*                     </li> *@
 @*                     <li class="nav-item"> *@
-@*                         <a class="nav-link text-dark" asp-area="" asp-controller="Other" asp-action="Cart">Cart</a> *@
+@*                         <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Cart">Cart</a> *@
 @*                     </li> *@
 @*                 </ul> *@
 @*             </div> *@
@@ -69,10 +69,10 @@
                             <a href="#"><i class="fa fa-heart"></i> Wishlist</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark fa fa-user" asp-area="" asp-controller="Other" asp-action="Cart">Cart</a>
+                            <a class="nav-link text-dark fa fa-user" asp-area="" asp-controller="Cart" asp-action="Cart">Cart</a>
                         </li>
                         <li>
-                            <a asp-area="" asp-controller="Other" asp-action="Checkout"><i class="fa fa-user"></i> Checkout</a>
+                            <a asp-area="" asp-controller="Cart" asp-action="Checkout"><i class="fa fa-user"></i> Checkout</a>
                         </li>
                         <li>
                             @Html.ActionLink("Login", "Login", "Users", "", new
@@ -101,7 +101,7 @@
 
             <div class="col-sm-6">
                 <div class="shopping-item">
-                    <a asp-area="" asp-controller="Other" asp-action="Cart">
+                    <a asp-area="" asp-controller="Cart" asp-action="Cart">
                         Cart - <span class="cart-amunt">$100</span>
                         <i class="fa fa-shopping-cart"></i>
                         <span class="product-count">5</span>
