--- a/Semestrovka/Semestrovka/Views/Users/MyProfile.cshtml
+++ b/Semestrovka/Semestrovka/Views/Users/MyProfile.cshtml
@@ -1,4 +1,73 @@
 ﻿@model Semestrovka.Models.DBModels.Users
 
-@{
-}
+@*<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->*@
+
+<div class="well">
+    <div id="myTabContent" class="tab-content">
+        <div class="tab-pane active in" name="home">
+            @using (Html.BeginForm("Edit", "Users", default, new
+            {
+                id = "tab"
+            }))
+            {
+                @Html.EditorForModel(Model)
+            @*<div class="form-group">
+                @Html.LabelFor(users => users.Firstname, new
+                {
+                    @class = "editor-label"
+                })
+                @Html.EditorFor(users => users.Firstname, new
+                {
+                    @class = "editor-field"
+                })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(users => users.Middlename, new
+                {
+                    @class = "editor-label"
+                })
+                @Html.EditorFor(users => users.Middlename, new
+                {
+                    @class = "editor-field"
+                })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(users => users.Lastname, new
+                {
+                    @class = "editor-label"
+                })
+                @Html.EditorFor(users => users.Lastname, new
+                {
+                    @class = "editor-field"
+                })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(users => users.Pass, new
+                {
+                    @class = "editor-label"
+                })
+                @Html.EditorFor(users => users.Pass, new
+                {
+                    @class = "editor-field"
+                })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(users => users.Address, new
+                {
+                    @class = "editor-label"
+                })
+                @Html.EditorFor(users => users.Address, new
+                {
+                    @class = "editor-field"
+                })
+            </div>*@
+                <div class="form-group">
+                    <input type="submit" value="Update" class="btn btn-primary"/>
+                </div>
+            }
+        </div>
+    </div>
+</div>
