--- a/Semestrovka/Semestrovka/Views/Categories/Category.cshtml
+++ b/Semestrovka/Semestrovka/Views/Categories/Category.cshtml
@@ -1,28 +1,28 @@
 ﻿@model IEnumerable<Semestrovka.Models.DBModels.Categories>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Categories";
 }
-
-<h1>Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Characteristics)
-            </th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Characteristics)
+        </th>
+        @Html.DisplayName("Items")
+        <th></th>
+    </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
@@ -31,11 +31,17 @@
                 @Html.DisplayFor(modelItem => item.Characteristics)
             </td>
             <td>
+                @Html.ActionLink("View items", "Index", "Products", new
+                {
+                    id = item.Id
+                })
+            </td>
+            <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
