--- a/Semestrovka/Semestrovka/Views/Products/Index.cshtml
+++ b/Semestrovka/Semestrovka/Views/Products/Index.cshtml
@@ -1,47 +1,52 @@
 ﻿@model IEnumerable<Semestrovka.Models.DBModels.Product>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Products";
 }
-
-<h1>Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Producer)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Characteristics)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductRating)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CategoryNavigation)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MainpictureurlNavigation)
-            </th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>
+            @Html.DisplayName("Image")
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Description)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Price)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Producer)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Characteristics)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ProductRating)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CategoryNavigation)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.MainpictureurlNavigation)
+        </th>
+        <th></th>
+    </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model)
+    {
         <tr>
+            <td>
+                <img src="@item.Productimages.FirstOrDefault()">
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
@@ -72,6 +77,6 @@
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
