--- a/Semestrovka/Semestrovka/wwwroot/style.css
+++ b/Semestrovka/Semestrovka/wwwroot/style.css
@@ -785,7 +785,7 @@ input[type="submit"]:hover, button[type=submit]:hover {background-color: #222}
 .product-gallery img {
     height: auto;
     margin-left: 15px;
-    width: 76px;
+    width: 40%;
 }
 .product-name {
     font-size: 25px;
