--- a/Semestrovka/Semestrovka/Views/Products/Details.cshtml
+++ b/Semestrovka/Semestrovka/Views/Products/Details.cshtml
@@ -50,8 +50,8 @@
             <form asp-action="AddToCart" asp-route-product="@Model" class="cart">
 
                 <div class="quantity">
-                    <input type="number" size="4" class="input-text qty text" title="Amount" value="amount"
-                           name="quantity" min="1" step="1">
+                    <input type="number" size="4" class="input-text qty text" title="Amount" value="1"
+                           name="amount" min="1" step="1">
                 </div>
 
                 <button class="add_to_cart_button" type="submit">Add to cart</button>
