--- a/Semestrovka/Semestrovka/Views/Other/Shop.cshtml
+++ b/Semestrovka/Semestrovka/Views/Other/Shop.cshtml
@@ -27,7 +27,7 @@
 
                         <div class="product-option-shop">
                             <a class="add_to_cart_button" data-quantity="1" data-product_sku="" data-product_id="70"
-                               rel="nofollow" asp-action="AddToCart" asp-controller="Products" asp-route-product="@item" asp-route-amount="1">
+                               rel="nofollow" asp-action="AddToCart" asp-controller="Products" asp-route-productId="@item.Id" asp-route-amount="1">
                                 Add to cart
                             </a>
                         </div>
