--- a/Semestrovka/Semestrovka/Views/Products/Index.cshtml
+++ b/Semestrovka/Semestrovka/Views/Products/Index.cshtml
@@ -45,7 +45,7 @@
     {
         <tr>
             <td>
-                <img src="@item.Productimages.FirstOrDefault().Image.Imagepath">
+                <img src="@item.MainpictureurlNavigation.Imagepath">
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
