--- a/Semestrovka/Semestrovka/Views/Cart/Cart.cshtml
+++ b/Semestrovka/Semestrovka/Views/Cart/Cart.cshtml
@@ -21,8 +21,8 @@
                                             <th class="product-remove">&nbsp;</th>
                                             <th class="product-thumbnail">&nbsp;</th>
                                             <th class="product-name">Product</th>
-                                            <th class="product-price">Status</th>
-                                            <th class="product-quantity">Quantity</th>
+                                            <th class="product-image">Image</th>
+                                            <th class="product-price">Price</th>
                                             <th class="product-subtotal">Delivery</th>
                                         </tr>
                                     </thead>
@@ -46,25 +46,25 @@
                                                         @*<img width="145" height="145" alt="poster_1_up"
                                                             class="shop_thumbnail"
                                                             src=@order.Datecreated>*@
-                                                        <a>@product.Name</a>
+                                                        <img src ="@product.MainpictureurlNavigation.Imagepath"></img>
                                                     </a>
                                                 </td>
 
                                                 <td class="product-name">
-                                                    <a asp-area="" asp-controller="Products" asp-action="Details" asp-route-id="@product.Id">@product.Id </a>
+                                                    <a asp-area="" asp-controller="Products" asp-action="Details" asp-route-name="@product.Name">@product.Name </a>
                                                 </td>
 
                                                 <td class="product-price">
-                                                    <span class="amount">@product.ProductRating</span>
+                                                    <a>@product.Price</a>
                                                 </td>
 
-                                                <td class="product-quantity">
+                                                <td class="product-image">
                                                     @*<div class="quantity buttons_added">
                                                             <input type="button" class="minus" value="-">
                                                             <input type="number" size="4" class="input-text qty text" title="Qty" value="1" min="0" step="1">
                                                             <input type="button" class="plus" value="+">
                                                         </div>*@
-                                                    <a @product.Id></a>
+                                                    <a @product.MainpictureurlNavigation.Imagepath></a>
                                                 </td>
 
                                                 <td class="product-subtotal">
